[package]
name = "ks-tool"
version = "1.2.0"
edition = "2021"
authors = ["daiyy <dyiyang@amazon.com>"]
rust-version = "1.75"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.194", features = ["serde_derive"] }
serde_json = "1"
aws-sdk-s3 = "1.11.0"
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
csv = "1.3.0"
indicatif = "0.17.7"
flate2 = "1.0.28"
urlencoding = "2.1.3"
s3-manifest = "0.3.0"
s3-transfer-manager = "0.2.0"
